# openmc_mcnp_adapter

./: pyproject.toml
.github/workflows/: CI.yml
rust/: Cargo.toml
rust/src/: lib.rs
src/openmc_mcnp_adapter/: openmc_conversion.py
